<resources>
    <string name="app_name">Kabar</string>
    <string name="app_version">v0.0.1</string>
    <string name="message_title_main">
        <u>Messages</u>
    </string>
    <string name="new_group">New Group</string>
    <string name="add_friend">Add Friend</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="profile_name">Profile Name</string>
    <string name="email">Email</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="dummy_username">johndoe</string>
    <string name="dummy_email">johndoe@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="search_with_username">Search with username</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
    <string name="dummy_display_name">John Doe</string>
    <string name="error">Error</string>
    <string name="contacts">Contacts</string>
    <string name="error_friend_already_added">You have already added this user!</string>
    <string name="error_not_found">Not Found!</string>
    <string name="error_cannot_add_yourself">You cannot add yourself!</string>
    <string name="success_contact_added">Contact added!</string>
    <string name="ok">Ok</string>
    <string name="hello_welcome_back">Hello, Welcome back!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_error">Login error!</string>
    <string name="hello_welcome">Hello, Welcome!</string>
    <string name="register_an_account">Register an account</string>
    <string name="name">Name</string>
    <string name="retype_password">Retype password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now!</string>
    <string name="register_error">Register error!</string>
    <string name="welcome_to_kabar">Welcome to Kabar!</string>
    <string name="join_us">Join us</string>
    <string name="i_already_have_an_account_login">I already have an account. Login</string>
    <string name="new_chat_reminder">You do not have chat, start a new conversation by clicking + button</string>
    <string name="type_here">Type Here...</string>
    <string name="hello">Hello!</string>
    <string name="dummy_time">10:00</string>
</resources>